--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "@quasar/quasar-ui-qiconpicker": "^2.0.7",
+    "@vueuse/core": "^10.9.0",
     "firebase": "^10.8.0",
     "moment": "^2.30.1",
     "pinia": "^2.0.11",
